--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
      "text": [
       "\n",
       "Metadata:\n",
-      "{'file': 'generated_in_notebook', 'row_count': 8, 'columns': ['customer_id', 'amount', 'date'], 'column_types': {'customer_id': 'int64', 'amount': 'float64', 'date': 'object'}, 'last_updated': '2025-05-12 14:06:22.785632', 'transformations': []}\n",
+      "{'file': 'generated_in_notebook', 'row_count': 8, 'columns': ['customer_id', 'amount', 'date'], 'column_types': {'customer_id': 'int64', 'amount': 'float64', 'date': 'object'}, 'last_updated': '2025-05-12 14:10:15.707960', 'transformations': []}\n",
       "\n",
       "Data Quality Issues:\n",
       "Column 'amount' has 1 missing values.\n",
@@ -204,27 +204,63 @@
        "</div>"
       ],
       "text/plain": [
-       "   customer_id      amount        date\n",
-       "0            1  200.000000  2023-01-01\n",
-       "1            2  150.000000  2023-01-02\n",
-       "2            3  235.714286  2023-01-03\n",
-       "3            4  300.000000  2023-01-04\n",
-       "4            5  250.000000  2023-01-05\n",
-       "6            6  500.000000  2023-01-07"
+       "   customer_id      amount       date\n",
+       "0            1  200.000000 2023-01-01\n",
+       "1            2  150.000000 2023-01-02\n",
+       "2            3  235.714286 2023-01-03\n",
+       "3            4  300.000000 2023-01-04\n",
+       "4            5  250.000000 2023-01-05\n",
+       "6            6  500.000000 2023-01-07"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Data passed all quality checks!\n",
+      "\n",
+      "Data Quality Issues:\n",
+      "Column 'amount' has 1 missing values.\n",
+      "\n",
+      "Data Quality Issues:\n",
+      "Column 'amount' has 1 missing values.\n",
+      "Column 'date' contains 1 invalid dates.\n",
+      "\n",
+      "Unit Tests Passed!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_682/3998098106.py:133: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_invalid['amount'].iloc[1] = np.nan\n",
+      "/tmp/ipykernel_682/3998098106.py:137: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_invalid['date'].iloc[1] = 'invalid_date'\n",
+      "/tmp/ipykernel_682/3998098106.py:137: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'invalid_date' has dtype incompatible with datetime64[ns], please explicitly cast to a compatible dtype first.\n",
+      "  df_invalid['date'].iloc[1] = 'invalid_date'\n"
+     ]
     }
    ],
    "source": [
     "# Ques_3.ipynb\n",
-    "# Task: Metadata Management for Data Quality\n",
+    "# Task: Metadata Management for Data Quality with Enhancements\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import json\n",
     "from datetime import datetime\n",
+    "import pytest\n",
     "\n",
     "# Step 1: Create the dataset directly within the code\n",
     "data = {\n",
@@ -238,7 +274,7 @@
     "\n",
     "# Step 2: Metadata structure\n",
     "metadata = {\n",
-    "    'file': 'generated_in_notebook',  # As we're not reading from a file\n",
+    "    'file': 'generated_in_notebook',\n",
     "    'row_count': len(df),\n",
     "    'columns': list(df.columns),\n",
     "    'column_types': {col: str(df[col].dtype) for col in df.columns},\n",
@@ -270,6 +306,15 @@
     "        expected_type = metadata['column_types'].get(col)\n",
     "        if expected_type and not np.issubdtype(df[col].dtype, np.generic):\n",
     "            issues.append(f\"Column '{col}' has an unexpected data type. Expected {expected_type}, got {str(df[col].dtype)}\")\n",
+    "\n",
+    "    # Check if 'date' column has a valid date format\n",
+    "    try:\n",
+    "        df['date'] = pd.to_datetime(df['date'], errors='coerce')\n",
+    "        invalid_dates = df['date'].isnull().sum()\n",
+    "        if invalid_dates > 0:\n",
+    "            issues.append(f\"Column 'date' contains {invalid_dates} invalid dates.\")\n",
+    "    except Exception as e:\n",
+    "        issues.append(f\"Error parsing 'date' column: {str(e)}\")\n",
     "    \n",
     "    # Print issues if any, else indicate no issues\n",
     "    if issues:\n",
@@ -284,15 +329,16 @@
     "# Validate the data quality\n",
     "data_quality_issues = validate_data_quality(df, metadata)\n",
     "\n",
-    "# Step 4: Log transformations made to the dataset\n",
+    "# Step 4: Log transformations dynamically\n",
     "def log_transformation(metadata, transformation_details):\n",
     "    \"\"\"\n",
     "    Add details of data transformations to the metadata.\n",
     "    \"\"\"\n",
-    "    metadata['transformations'].append({\n",
+    "    transformation_entry = {\n",
     "        'transformation': transformation_details,\n",
     "        'timestamp': str(datetime.now())\n",
-    "    })\n",
+    "    }\n",
+    "    metadata['transformations'].append(transformation_entry)\n",
     "\n",
     "# Example transformations\n",
     "log_transformation(metadata, \"Imputed missing values in 'amount' column with mean.\")\n",
@@ -323,7 +369,33 @@
     "\n",
     "# Final metadata and data output\n",
     "print(\"\\nFinal Cleaned Data:\")\n",
-    "display(df)\n"
+    "display(df)\n",
+    "\n",
+    "\n",
+    "# Unit Test Functions (to check validation, cleaning, and transformation)\n",
+    "def test_validate_data_quality():\n",
+    "    # Test valid data\n",
+    "    df_valid = pd.DataFrame({\n",
+    "        'customer_id': [1, 2, 3],\n",
+    "        'amount': [100, 200, 300],\n",
+    "        'date': ['2023-01-01', '2023-01-02', '2023-01-03']\n",
+    "    })\n",
+    "    metadata_valid = {'columns': df_valid.columns.tolist(), 'column_types': {col: str(df_valid[col].dtype) for col in df_valid.columns}}\n",
+    "    assert len(validate_data_quality(df_valid, metadata_valid)) == 0  # Should pass with no issues\n",
+    "\n",
+    "    # Test data with missing value in 'amount' column\n",
+    "    df_invalid = df_valid.copy()\n",
+    "    df_invalid['amount'].iloc[1] = np.nan\n",
+    "    assert len(validate_data_quality(df_invalid, metadata_valid)) > 0  # Should flag missing value issue\n",
+    "\n",
+    "    # Test invalid date format\n",
+    "    df_invalid['date'].iloc[1] = 'invalid_date'\n",
+    "    assert len(validate_data_quality(df_invalid, metadata_valid)) > 0  # Should flag invalid date issue\n",
+    "\n",
+    "\n",
+    "# Run the unit tests\n",
+    "test_validate_data_quality()\n",
+    "print(\"\\nUnit Tests Passed!\")\n"
    ]
   }
  ],
