--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
      "text": [
       "\n",
       "Metadata:\n",
-      "{'file': 'generated_in_notebook', 'row_count': 8, 'columns': ['customer_id', 'amount', 'date'], 'column_types': {'customer_id': 'int64', 'amount': 'float64', 'date': 'object'}, 'last_updated': '2025-05-12 14:10:15.707960', 'transformations': []}\n",
+      "{'file': 'generated_in_notebook', 'row_count': 8, 'columns': ['customer_id', 'amount', 'date'], 'column_types': {'customer_id': 'int64', 'amount': 'float64', 'date': 'object'}, 'last_updated': '2025-05-12 14:13:31.541966', 'transformations': []}\n",
       "\n",
       "Data Quality Issues:\n",
       "Column 'amount' has 1 missing values.\n",
@@ -215,41 +215,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Data passed all quality checks!\n",
-      "\n",
-      "Data Quality Issues:\n",
-      "Column 'amount' has 1 missing values.\n",
-      "\n",
-      "Data Quality Issues:\n",
-      "Column 'amount' has 1 missing values.\n",
-      "Column 'date' contains 1 invalid dates.\n",
-      "\n",
-      "Unit Tests Passed!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_682/3998098106.py:133: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_invalid['amount'].iloc[1] = np.nan\n",
-      "/tmp/ipykernel_682/3998098106.py:137: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  df_invalid['date'].iloc[1] = 'invalid_date'\n",
-      "/tmp/ipykernel_682/3998098106.py:137: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'invalid_date' has dtype incompatible with datetime64[ns], please explicitly cast to a compatible dtype first.\n",
-      "  df_invalid['date'].iloc[1] = 'invalid_date'\n"
-     ]
     }
    ],
    "source": [
@@ -260,7 +225,6 @@
     "import numpy as np\n",
     "import json\n",
     "from datetime import datetime\n",
-    "import pytest\n",
     "\n",
     "# Step 1: Create the dataset directly within the code\n",
     "data = {\n",
@@ -369,33 +333,7 @@
     "\n",
     "# Final metadata and data output\n",
     "print(\"\\nFinal Cleaned Data:\")\n",
-    "display(df)\n",
-    "\n",
-    "\n",
-    "# Unit Test Functions (to check validation, cleaning, and transformation)\n",
-    "def test_validate_data_quality():\n",
-    "    # Test valid data\n",
-    "    df_valid = pd.DataFrame({\n",
-    "        'customer_id': [1, 2, 3],\n",
-    "        'amount': [100, 200, 300],\n",
-    "        'date': ['2023-01-01', '2023-01-02', '2023-01-03']\n",
-    "    })\n",
-    "    metadata_valid = {'columns': df_valid.columns.tolist(), 'column_types': {col: str(df_valid[col].dtype) for col in df_valid.columns}}\n",
-    "    assert len(validate_data_quality(df_valid, metadata_valid)) == 0  # Should pass with no issues\n",
-    "\n",
-    "    # Test data with missing value in 'amount' column\n",
-    "    df_invalid = df_valid.copy()\n",
-    "    df_invalid['amount'].iloc[1] = np.nan\n",
-    "    assert len(validate_data_quality(df_invalid, metadata_valid)) > 0  # Should flag missing value issue\n",
-    "\n",
-    "    # Test invalid date format\n",
-    "    df_invalid['date'].iloc[1] = 'invalid_date'\n",
-    "    assert len(validate_data_quality(df_invalid, metadata_valid)) > 0  # Should flag invalid date issue\n",
-    "\n",
-    "\n",
-    "# Run the unit tests\n",
-    "test_validate_data_quality()\n",
-    "print(\"\\nUnit Tests Passed!\")\n"
+    "display(df)\n"
    ]
   }
  ],
