--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_3.ipynb
@@ -16,205 +16,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded Data:\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>customer_id</th>\n",
-       "      <th>amount</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>200.0</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>2023-01-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2023-01-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>2023-01-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>250.0</td>\n",
-       "      <td>2023-01-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2</td>\n",
-       "      <td>150.0</td>\n",
-       "      <td>2023-01-06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>500.0</td>\n",
-       "      <td>2023-01-07</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>3</td>\n",
-       "      <td>100.0</td>\n",
-       "      <td>2023-01-08</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   customer_id  amount        date\n",
-       "0            1   200.0  2023-01-01\n",
-       "1            2   150.0  2023-01-02\n",
-       "2            3     NaN  2023-01-03\n",
-       "3            4   300.0  2023-01-04\n",
-       "4            5   250.0  2023-01-05\n",
-       "5            2   150.0  2023-01-06\n",
-       "6            6   500.0  2023-01-07\n",
-       "7            3   100.0  2023-01-08"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Loaded Data:\n",
+      "   customer_id  amount        date\n",
+      "0            1   200.0  2023-01-01\n",
+      "1            2   150.0  2023-01-02\n",
+      "2            3     NaN  2023-01-03\n",
+      "3            4   300.0  2023-01-04\n",
+      "4            5   250.0  2023-01-05\n",
+      "5            2   150.0  2023-01-06\n",
+      "6            6   500.0  2023-01-07\n",
+      "7            3   100.0  2023-01-08\n",
       "\n",
       "Metadata:\n",
-      "{'file': 'generated_in_notebook', 'row_count': 8, 'columns': ['customer_id', 'amount', 'date'], 'column_types': {'customer_id': 'int64', 'amount': 'float64', 'date': 'object'}, 'last_updated': '2025-05-12 14:13:31.541966', 'transformations': []}\n",
+      "{'file': 'generated_in_notebook', 'row_count': 8, 'columns': ['customer_id', 'amount', 'date'], 'column_types': {'customer_id': 'int64', 'amount': 'float64', 'date': 'object'}, 'last_updated': '2025-05-12 14:15:38.579486', 'transformations': []}\n",
       "\n",
       "Data Quality Issues:\n",
       "Column 'amount' has 1 missing values.\n",
       "\n",
       "Cleaned data saved to 'cleaned_data.csv'\n",
       "\n",
-      "Final Cleaned Data:\n"
+      "Final Cleaned Data:\n",
+      "   customer_id      amount       date\n",
+      "0            1  200.000000 2023-01-01\n",
+      "1            2  150.000000 2023-01-02\n",
+      "2            3  235.714286 2023-01-03\n",
+      "3            4  300.000000 2023-01-04\n",
+      "4            5  250.000000 2023-01-05\n",
+      "6            6  500.000000 2023-01-07\n",
+      "\n",
+      "Data passed all quality checks!\n",
+      "\n",
+      "Data Quality Issues:\n",
+      "Column 'amount' has 1 missing values.\n",
+      "\n",
+      "Data Quality Issues:\n",
+      "Column 'amount' has 1 missing values.\n",
+      "Column 'date' contains 1 invalid dates.\n",
+      "\n",
+      "Unit Tests Passed!\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>customer_id</th>\n",
-       "      <th>amount</th>\n",
-       "      <th>date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>200.000000</td>\n",
-       "      <td>2023-01-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>150.000000</td>\n",
-       "      <td>2023-01-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>235.714286</td>\n",
-       "      <td>2023-01-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>300.000000</td>\n",
-       "      <td>2023-01-04</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>250.000000</td>\n",
-       "      <td>2023-01-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>500.000000</td>\n",
-       "      <td>2023-01-07</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   customer_id      amount       date\n",
-       "0            1  200.000000 2023-01-01\n",
-       "1            2  150.000000 2023-01-02\n",
-       "2            3  235.714286 2023-01-03\n",
-       "3            4  300.000000 2023-01-04\n",
-       "4            5  250.000000 2023-01-05\n",
-       "6            6  500.000000 2023-01-07"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_682/3466340398.py:135: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_invalid['amount'].iloc[1] = np.nan\n",
+      "/tmp/ipykernel_682/3466340398.py:139: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_invalid['date'].iloc[1] = 'invalid_date'\n",
+      "/tmp/ipykernel_682/3466340398.py:139: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'invalid_date' has dtype incompatible with datetime64[ns], please explicitly cast to a compatible dtype first.\n",
+      "  df_invalid['date'].iloc[1] = 'invalid_date'\n"
+     ]
     }
    ],
    "source": [
@@ -248,7 +113,7 @@
     "\n",
     "# Display the dataset and metadata\n",
     "print(\"Loaded Data:\")\n",
-    "display(df)\n",
+    "print(df)\n",
     "print(\"\\nMetadata:\")\n",
     "print(metadata)\n",
     "\n",
@@ -273,7 +138,7 @@
     "\n",
     "    # Check if 'date' column has a valid date format\n",
     "    try:\n",
-    "        df['date'] = pd.to_datetime(df['date'], errors='coerce')\n",
+    "        df['date'] = pd.to_datetime(df['date'], errors='coerce')  # Invalid date values turn into NaT\n",
     "        invalid_dates = df['date'].isnull().sum()\n",
     "        if invalid_dates > 0:\n",
     "            issues.append(f\"Column 'date' contains {invalid_dates} invalid dates.\")\n",
@@ -309,6 +174,7 @@
     "log_transformation(metadata, \"Removed duplicates based on 'customer_id' column.\")\n",
     "\n",
     "# Step 5: Apply data cleaning or transformations and log those\n",
+    "# Filling missing values in 'amount' column with the mean\n",
     "df['amount'].fillna(df['amount'].mean(), inplace=True)  # Example transformation\n",
     "log_transformation(metadata, \"Imputed missing 'amount' values using mean.\")\n",
     "\n",
@@ -321,8 +187,11 @@
     "    \"\"\"\n",
     "    Save metadata to a JSON file for tracking.\n",
     "    \"\"\"\n",
-    "    with open(metadata_path, 'w') as f:\n",
-    "        json.dump(metadata, f, indent=4)\n",
+    "    try:\n",
+    "        with open(metadata_path, 'w') as f:\n",
+    "            json.dump(metadata, f, indent=4)\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error saving metadata: {e}\")\n",
     "\n",
     "# Save the updated metadata\n",
     "save_metadata(metadata)\n",
@@ -333,7 +202,32 @@
     "\n",
     "# Final metadata and data output\n",
     "print(\"\\nFinal Cleaned Data:\")\n",
-    "display(df)\n"
+    "print(df)\n",
+    "\n",
+    "# Unit Test Functions (to check validation, cleaning, and transformation)\n",
+    "def test_validate_data_quality():\n",
+    "    # Test valid data\n",
+    "    df_valid = pd.DataFrame({\n",
+    "        'customer_id': [1, 2, 3],\n",
+    "        'amount': [100, 200, 300],\n",
+    "        'date': ['2023-01-01', '2023-01-02', '2023-01-03']\n",
+    "    })\n",
+    "    metadata_valid = {'columns': df_valid.columns.tolist(), 'column_types': {col: str(df_valid[col].dtype) for col in df_valid.columns}}\n",
+    "    assert len(validate_data_quality(df_valid, metadata_valid)) == 0  # Should pass with no issues\n",
+    "\n",
+    "    # Test data with missing value in 'amount' column\n",
+    "    df_invalid = df_valid.copy()\n",
+    "    df_invalid['amount'].iloc[1] = np.nan\n",
+    "    assert len(validate_data_quality(df_invalid, metadata_valid)) > 0  # Should flag missing value issue\n",
+    "\n",
+    "    # Test invalid date format\n",
+    "    df_invalid['date'].iloc[1] = 'invalid_date'\n",
+    "    assert len(validate_data_quality(df_invalid, metadata_valid)) > 0  # Should flag invalid date issue\n",
+    "\n",
+    "\n",
+    "# Run the unit tests\n",
+    "test_validate_data_quality()\n",
+    "print(\"\\nUnit Tests Passed!\")\n"
    ]
   }
  ],
