--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_4.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_4.ipynb
@@ -18,23 +18,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All data records are valid according to the schema.\n",
+      "\n",
+      "Missing Values in DataFrame:\n",
+      "customer_id      0\n",
+      "customer_name    0\n",
+      "email            0\n",
+      "date_joined      0\n",
+      "amount_spent     0\n",
+      "dtype: int64\n",
+      "\n",
+      "Data Types:\n",
+      "customer_id        int64\n",
+      "customer_name     object\n",
+      "email             object\n",
+      "date_joined       object\n",
+      "amount_spent     float64\n",
+      "dtype: object\n",
+      "\n",
+      "DataFrame after transformations:\n",
+      "   customer_id customer_name              email date_joined  amount_spent\n",
+      "0            1      John Doe   john@example.com  2023-01-01        150.75\n",
+      "1            2      Jane Doe   jane@example.com  2023-02-01        200.50\n",
+      "2            3     Sam Smith    sam@example.com  2023-03-01         75.25\n",
+      "3            4   Alice Brown  alice@example.com  2023-04-01        300.00\n",
+      "4            5     Bob White    bob@example.com         NaT        120.50\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code from here"
+    "import json\n",
+    "import pandas as pd\n",
+    "from jsonschema import validate, ValidationError\n",
+    "\n",
+    "# Step 1: Define the schema (JSON format for simplicity)\n",
+    "avro_schema = {\n",
+    "    \"type\": \"object\",\n",
+    "    \"properties\": {\n",
+    "        \"customer_id\": {\"type\": \"integer\"},\n",
+    "        \"customer_name\": {\"type\": \"string\"},\n",
+    "        \"email\": {\"type\": \"string\"},\n",
+    "        \"date_joined\": {\"type\": \"string\", \"pattern\": r\"^\\d{4}-\\d{2}-\\d{2}$\"},  # YYYY-MM-DD format\n",
+    "        \"amount_spent\": {\"type\": \"number\"}\n",
+    "    },\n",
+    "    \"required\": [\"customer_id\", \"customer_name\", \"email\", \"date_joined\", \"amount_spent\"]\n",
+    "}\n",
+    "\n",
+    "# Step 2: Create a sample dataset\n",
+    "data = [\n",
+    "    {\"customer_id\": 1, \"customer_name\": \"John Doe\", \"email\": \"john@example.com\", \"date_joined\": \"2023-01-01\", \"amount_spent\": 150.75},\n",
+    "    {\"customer_id\": 2, \"customer_name\": \"Jane Doe\", \"email\": \"jane@example.com\", \"date_joined\": \"2023-02-01\", \"amount_spent\": 200.50},\n",
+    "    {\"customer_id\": 3, \"customer_name\": \"Sam Smith\", \"email\": \"sam@example.com\", \"date_joined\": \"2023-03-01\", \"amount_spent\": 75.25},\n",
+    "    {\"customer_id\": 4, \"customer_name\": \"Alice Brown\", \"email\": \"alice@example.com\", \"date_joined\": \"2023-04-01\", \"amount_spent\": 300.00},\n",
+    "    # Invalid data (wrong date format)\n",
+    "    {\"customer_id\": 5, \"customer_name\": \"Bob White\", \"email\": \"bob@example.com\", \"date_joined\": \"2023-31-01\", \"amount_spent\": 120.50}\n",
+    "]\n",
+    "\n",
+    "# Step 3: Function to validate data against the schema\n",
+    "def validate_data(data, schema):\n",
+    "    \"\"\"\n",
+    "    Validates data against the provided schema.\n",
+    "    :param data: List of records (dictionaries)\n",
+    "    :param schema: JSON schema to validate against\n",
+    "    :return: List of errors or empty list if data is valid\n",
+    "    \"\"\"\n",
+    "    errors = []\n",
+    "    for record in data:\n",
+    "        try:\n",
+    "            # Validate the record against the schema\n",
+    "            validate(instance=record, schema=schema)\n",
+    "        except ValidationError as e:\n",
+    "            errors.append(f\"Validation error in record {record}: {e.message}\")\n",
+    "    return errors\n",
+    "\n",
+    "# Step 4: Validate the data\n",
+    "validation_errors = validate_data(data, avro_schema)\n",
+    "\n",
+    "# Step 5: Output the results of the validation\n",
+    "if validation_errors:\n",
+    "    print(\"Validation Errors:\")\n",
+    "    for error in validation_errors:\n",
+    "        print(error)\n",
+    "else:\n",
+    "    print(\"All data records are valid according to the schema.\")\n",
+    "\n",
+    "# Step 6: Handle the data in DataFrame for further processing (optional)\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "# Check for missing values or incorrect types in the DataFrame\n",
+    "missing_values = df.isnull().sum()\n",
+    "print(\"\\nMissing Values in DataFrame:\")\n",
+    "print(missing_values)\n",
+    "\n",
+    "# Check if the data types are correct\n",
+    "print(\"\\nData Types:\")\n",
+    "print(df.dtypes)\n",
+    "\n",
+    "# Optional: Perform transformation, e.g., converting 'date_joined' to datetime format\n",
+    "df['date_joined'] = pd.to_datetime(df['date_joined'], errors='coerce')\n",
+    "\n",
+    "# Output the DataFrame\n",
+    "print(\"\\nDataFrame after transformations:\")\n",
+    "print(df)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
