--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_4.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_4.ipynb
@@ -18,114 +18,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "All data records are valid according to the schema.\n",
-      "\n",
-      "Missing Values in DataFrame:\n",
-      "customer_id      0\n",
-      "customer_name    0\n",
-      "email            0\n",
-      "date_joined      0\n",
-      "amount_spent     0\n",
-      "dtype: int64\n",
-      "\n",
-      "Data Types:\n",
-      "customer_id        int64\n",
-      "customer_name     object\n",
-      "email             object\n",
-      "date_joined       object\n",
-      "amount_spent     float64\n",
-      "dtype: object\n",
-      "\n",
-      "DataFrame after transformations:\n",
-      "   customer_id customer_name              email date_joined  amount_spent\n",
-      "0            1      John Doe   john@example.com  2023-01-01        150.75\n",
-      "1            2      Jane Doe   jane@example.com  2023-02-01        200.50\n",
-      "2            3     Sam Smith    sam@example.com  2023-03-01         75.25\n",
-      "3            4   Alice Brown  alice@example.com  2023-04-01        300.00\n",
-      "4            5     Bob White    bob@example.com         NaT        120.50\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'avro'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Ques_4.ipynb – Complex Schema Validation with Avro (Fixed Version)\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mavro\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mschema\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mio\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mavro\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DatumWriter, BinaryEncoder\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'avro'"
      ]
     }
    ],
    "source": [
-    "import json\n",
-    "import pandas as pd\n",
-    "from jsonschema import validate, ValidationError\n",
+    "# Ques_4.ipynb – Complex Schema Validation with Avro (Fixed Version)\n",
     "\n",
-    "# Step 1: Define the schema (JSON format for simplicity)\n",
-    "avro_schema = {\n",
-    "    \"type\": \"object\",\n",
-    "    \"properties\": {\n",
-    "        \"customer_id\": {\"type\": \"integer\"},\n",
-    "        \"customer_name\": {\"type\": \"string\"},\n",
-    "        \"email\": {\"type\": \"string\"},\n",
-    "        \"date_joined\": {\"type\": \"string\", \"pattern\": r\"^\\d{4}-\\d{2}-\\d{2}$\"},  # YYYY-MM-DD format\n",
-    "        \"amount_spent\": {\"type\": \"number\"}\n",
-    "    },\n",
-    "    \"required\": [\"customer_id\", \"customer_name\", \"email\", \"date_joined\", \"amount_spent\"]\n",
+    "import json\n",
+    "import avro.schema\n",
+    "import io\n",
+    "from avro.io import DatumWriter, BinaryEncoder\n",
+    "import pandas as pd\n",
+    "\n",
+    "# 1. Define Avro schema\n",
+    "schema_json = {\n",
+    "    \"namespace\": \"example.avro\",\n",
+    "    \"type\": \"record\",\n",
+    "    \"name\": \"Customer\",\n",
+    "    \"fields\": [\n",
+    "        {\"name\": \"customer_id\", \"type\": \"int\"},\n",
+    "        {\"name\": \"name\", \"type\": \"string\"},\n",
+    "        {\"name\": \"email\", \"type\": \"string\"},\n",
+    "        {\"name\": \"is_active\", \"type\": \"boolean\"},\n",
+    "        {\"name\": \"balance\", \"type\": \"double\"},\n",
+    "        {\"name\": \"joined_date\", \"type\": \"string\"}\n",
+    "    ]\n",
     "}\n",
     "\n",
-    "# Step 2: Create a sample dataset\n",
-    "data = [\n",
-    "    {\"customer_id\": 1, \"customer_name\": \"John Doe\", \"email\": \"john@example.com\", \"date_joined\": \"2023-01-01\", \"amount_spent\": 150.75},\n",
-    "    {\"customer_id\": 2, \"customer_name\": \"Jane Doe\", \"email\": \"jane@example.com\", \"date_joined\": \"2023-02-01\", \"amount_spent\": 200.50},\n",
-    "    {\"customer_id\": 3, \"customer_name\": \"Sam Smith\", \"email\": \"sam@example.com\", \"date_joined\": \"2023-03-01\", \"amount_spent\": 75.25},\n",
-    "    {\"customer_id\": 4, \"customer_name\": \"Alice Brown\", \"email\": \"alice@example.com\", \"date_joined\": \"2023-04-01\", \"amount_spent\": 300.00},\n",
-    "    # Invalid data (wrong date format)\n",
-    "    {\"customer_id\": 5, \"customer_name\": \"Bob White\", \"email\": \"bob@example.com\", \"date_joined\": \"2023-31-01\", \"amount_spent\": 120.50}\n",
+    "schema = avro.schema.parse(json.dumps(schema_json))\n",
+    "\n",
+    "# 2. Sample records\n",
+    "records = [\n",
+    "    {\"customer_id\": 1, \"name\": \"Alice\", \"email\": \"alice@example.com\", \"is_active\": True, \"balance\": 100.0, \"joined_date\": \"2023-01-01\"},\n",
+    "    {\"customer_id\": 2, \"name\": \"Bob\", \"email\": \"bob@example.com\", \"is_active\": False, \"balance\": 150.5, \"joined_date\": \"2023-02-10\"},\n",
+    "    # Invalid: missing email\n",
+    "    {\"customer_id\": 3, \"name\": \"Charlie\", \"is_active\": True, \"balance\": 50.0, \"joined_date\": \"2023-03-01\"},\n",
+    "    # Invalid: string instead of double\n",
+    "    {\"customer_id\": 4, \"name\": \"Dana\", \"email\": \"dana@example.com\", \"is_active\": True, \"balance\": \"NaN\", \"joined_date\": \"2023-04-01\"},\n",
     "]\n",
     "\n",
-    "# Step 3: Function to validate data against the schema\n",
-    "def validate_data(data, schema):\n",
-    "    \"\"\"\n",
-    "    Validates data against the provided schema.\n",
-    "    :param data: List of records (dictionaries)\n",
-    "    :param schema: JSON schema to validate against\n",
-    "    :return: List of errors or empty list if data is valid\n",
-    "    \"\"\"\n",
-    "    errors = []\n",
-    "    for record in data:\n",
-    "        try:\n",
-    "            # Validate the record against the schema\n",
-    "            validate(instance=record, schema=schema)\n",
-    "        except ValidationError as e:\n",
-    "            errors.append(f\"Validation error in record {record}: {e.message}\")\n",
-    "    return errors\n",
+    "# 3. Validate each record\n",
+    "valid_records = []\n",
+    "invalid_records = []\n",
     "\n",
-    "# Step 4: Validate the data\n",
-    "validation_errors = validate_data(data, avro_schema)\n",
+    "for record in records:\n",
+    "    try:\n",
+    "        bytes_writer = io.BytesIO()\n",
+    "        encoder = BinaryEncoder(bytes_writer)\n",
+    "        writer = DatumWriter(schema)\n",
+    "        writer.write(record, encoder)\n",
+    "        valid_records.append(record)\n",
+    "    except Exception as e:\n",
+    "        invalid_records.append((record, str(e)))\n",
     "\n",
-    "# Step 5: Output the results of the validation\n",
-    "if validation_errors:\n",
-    "    print(\"Validation Errors:\")\n",
-    "    for error in validation_errors:\n",
-    "        print(error)\n",
-    "else:\n",
-    "    print(\"All data records are valid according to the schema.\")\n",
+    "# 4. Results\n",
+    "print(\"✅ Valid Records:\")\n",
+    "for r in valid_records:\n",
+    "    print(r)\n",
     "\n",
-    "# Step 6: Handle the data in DataFrame for further processing (optional)\n",
-    "df = pd.DataFrame(data)\n",
+    "print(\"\\n❌ Invalid Records:\")\n",
+    "for r, e in invalid_records:\n",
+    "    print(f\"Record: {r}\\nError: {e}\\n\")\n",
     "\n",
-    "# Check for missing values or incorrect types in the DataFrame\n",
-    "missing_values = df.isnull().sum()\n",
-    "print(\"\\nMissing Values in DataFrame:\")\n",
-    "print(missing_values)\n",
-    "\n",
-    "# Check if the data types are correct\n",
-    "print(\"\\nData Types:\")\n",
-    "print(df.dtypes)\n",
-    "\n",
-    "# Optional: Perform transformation, e.g., converting 'date_joined' to datetime format\n",
-    "df['date_joined'] = pd.to_datetime(df['date_joined'], errors='coerce')\n",
-    "\n",
-    "# Output the DataFrame\n",
-    "print(\"\\nDataFrame after transformations:\")\n",
+    "# 5. Convert to DataFrame\n",
+    "df = pd.DataFrame(valid_records)\n",
+    "print(\"\\n📘 Final DataFrame (valid records only):\")\n",
     "print(df)\n"
    ]
   }
