--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_4.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_4.ipynb
@@ -18,31 +18,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'avro'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Ques_4.ipynb – Complex Schema Validation with Avro (Fixed Version)\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mavro\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mschema\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mio\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mavro\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mio\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DatumWriter, BinaryEncoder\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'avro'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Collecting avro-python3\n",
+      "  Downloading avro-python3-1.10.2.tar.gz (38 kB)\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hBuilding wheels for collected packages: avro-python3\n",
+      "\u001b[33m  DEPRECATION: Building 'avro-python3' using the legacy setup.py bdist_wheel mechanism, which will be removed in a future version. pip 25.3 will enforce this behaviour change. A possible replacement is to use the standardized build interface by setting the `--use-pep517` option, (possibly combined with `--no-build-isolation`), or adding a `pyproject.toml` file to the source tree of 'avro-python3'. Discussion can be found at https://github.com/pypa/pip/issues/6334\u001b[0m\u001b[33m\n",
+      "\u001b[0m  Building wheel for avro-python3 (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for avro-python3: filename=avro_python3-1.10.2-py3-none-any.whl size=43994 sha256=65cd3a5329dd8ce7b91d8e5e916d7cb4482e0e746eafefabab821fd69cc4ceb9\n",
+      "  Stored in directory: /home/vscode/.cache/pip/wheels/bc/85/62/6cdd81c56f923946b401cecff38055b94c9b766927f7d8ca82\n",
+      "Successfully built avro-python3\n",
+      "Installing collected packages: avro-python3\n",
+      "Successfully installed avro-python3-1.10.2\n",
+      "✅ Valid Records:\n",
+      "{'customer_id': 1, 'name': 'Alice', 'email': 'alice@example.com', 'is_active': True, 'balance': 100.0, 'joined_date': '2023-01-01'}\n",
+      "{'customer_id': 2, 'name': 'Bob', 'email': 'bob@example.com', 'is_active': False, 'balance': 150.5, 'joined_date': '2023-02-10'}\n",
+      "\n",
+      "❌ Invalid Records:\n",
+      "Record: {'customer_id': 3, 'name': 'Charlie', 'is_active': True, 'balance': 50.0, 'joined_date': '2023-03-01'}\n",
+      "Error: The datum {'customer_id': 3, 'name': 'Charlie', 'is_active': True, 'balance': 50.0, 'joined_date': '2023-03-01'} is not an example of the schema {\n",
+      "  \"type\": \"record\",\n",
+      "  \"name\": \"Customer\",\n",
+      "  \"namespace\": \"example.avro\",\n",
+      "  \"fields\": [\n",
+      "    {\n",
+      "      \"type\": \"int\",\n",
+      "      \"name\": \"customer_id\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"type\": \"string\",\n",
+      "      \"name\": \"name\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"type\": \"string\",\n",
+      "      \"name\": \"email\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"type\": \"boolean\",\n",
+      "      \"name\": \"is_active\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"type\": \"double\",\n",
+      "      \"name\": \"balance\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"type\": \"string\",\n",
+      "      \"name\": \"joined_date\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n",
+      "\n",
+      "Record: {'customer_id': 4, 'name': 'Dana', 'email': 'dana@example.com', 'is_active': True, 'balance': 'NaN', 'joined_date': '2023-04-01'}\n",
+      "Error: The datum {'customer_id': 4, 'name': 'Dana', 'email': 'dana@example.com', 'is_active': True, 'balance': 'NaN', 'joined_date': '2023-04-01'} is not an example of the schema {\n",
+      "  \"type\": \"record\",\n",
+      "  \"name\": \"Customer\",\n",
+      "  \"namespace\": \"example.avro\",\n",
+      "  \"fields\": [\n",
+      "    {\n",
+      "      \"type\": \"int\",\n",
+      "      \"name\": \"customer_id\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"type\": \"string\",\n",
+      "      \"name\": \"name\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"type\": \"string\",\n",
+      "      \"name\": \"email\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"type\": \"boolean\",\n",
+      "      \"name\": \"is_active\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"type\": \"double\",\n",
+      "      \"name\": \"balance\"\n",
+      "    },\n",
+      "    {\n",
+      "      \"type\": \"string\",\n",
+      "      \"name\": \"joined_date\"\n",
+      "    }\n",
+      "  ]\n",
+      "}\n",
+      "\n",
+      "\n",
+      "📘 Final DataFrame (valid records only):\n",
+      "   customer_id   name              email  is_active  balance joined_date\n",
+      "0            1  Alice  alice@example.com       True    100.0  2023-01-01\n",
+      "1            2    Bob    bob@example.com      False    150.5  2023-02-10\n"
      ]
     }
    ],
    "source": [
     "# Ques_4.ipynb – Complex Schema Validation with Avro (Fixed Version)\n",
     "\n",
+    "\n",
+    "try:\n",
+    "    import avro.schema\n",
+    "    import io\n",
+    "    from avro.io import DatumWriter, BinaryEncoder\n",
+    "except ImportError:\n",
+    "    import sys\n",
+    "    !{sys.executable} -m pip install avro-python3\n",
+    "    import avro.schema\n",
+    "    import io\n",
+    "    from avro.io import DatumWriter, BinaryEncoder\n",
+    "\n",
     "import json\n",
-    "import avro.schema\n",
-    "import io\n",
-    "from avro.io import DatumWriter, BinaryEncoder\n",
     "import pandas as pd\n",
     "\n",
-    "# 1. Define Avro schema\n",
+    "# Step 2: Define Avro schema\n",
     "schema_json = {\n",
     "    \"namespace\": \"example.avro\",\n",
     "    \"type\": \"record\",\n",
@@ -57,9 +149,14 @@
     "    ]\n",
     "}\n",
     "\n",
-    "schema = avro.schema.parse(json.dumps(schema_json))\n",
+    "# Parse schema\n",
+    "try:\n",
+    "    schema = avro.schema.parse(json.dumps(schema_json))\n",
+    "except Exception as e:\n",
+    "    print(f\"❌ Failed to parse schema: {e}\")\n",
+    "    raise\n",
     "\n",
-    "# 2. Sample records\n",
+    "# Step 3: Create sample records\n",
     "records = [\n",
     "    {\"customer_id\": 1, \"name\": \"Alice\", \"email\": \"alice@example.com\", \"is_active\": True, \"balance\": 100.0, \"joined_date\": \"2023-01-01\"},\n",
     "    {\"customer_id\": 2, \"name\": \"Bob\", \"email\": \"bob@example.com\", \"is_active\": False, \"balance\": 150.5, \"joined_date\": \"2023-02-10\"},\n",
@@ -69,7 +166,7 @@
     "    {\"customer_id\": 4, \"name\": \"Dana\", \"email\": \"dana@example.com\", \"is_active\": True, \"balance\": \"NaN\", \"joined_date\": \"2023-04-01\"},\n",
     "]\n",
     "\n",
-    "# 3. Validate each record\n",
+    "# Step 4: Validate records\n",
     "valid_records = []\n",
     "invalid_records = []\n",
     "\n",
@@ -83,7 +180,7 @@
     "    except Exception as e:\n",
     "        invalid_records.append((record, str(e)))\n",
     "\n",
-    "# 4. Results\n",
+    "# Step 5: Output results\n",
     "print(\"✅ Valid Records:\")\n",
     "for r in valid_records:\n",
     "    print(r)\n",
@@ -92,7 +189,7 @@
     "for r, e in invalid_records:\n",
     "    print(f\"Record: {r}\\nError: {e}\\n\")\n",
     "\n",
-    "# 5. Convert to DataFrame\n",
+    "# Step 6: Convert valid records to DataFrame\n",
     "df = pd.DataFrame(valid_records)\n",
     "print(\"\\n📘 Final DataFrame (valid records only):\")\n",
     "print(df)\n"
