Fix protobuf MessageFactory method from CreatePrototype to GetPrototype

--- a/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_5.ipynb
+++ b/src/Module 9/Data Quality Challenges in Data Engineering Pipelines/Ques_5.ipynb
@@ -18,33 +18,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Valid Records:\n",
+      "  {'customer_id': 1, 'name': 'Alice', 'email': 'alice@example.com', 'balance': 120.0, 'is_active': True}\n",
+      "  {'customer_id': 2, 'name': 'Bob', 'email': 'bob@example.com', 'balance': 75.5, 'is_active': False}\n",
+      "  {'customer_id': 3, 'name': '', 'email': 'charlie@', 'balance': -10.0, 'is_active': True}\n",
+      "\n",
+      "❌ Invalid Records:\n",
+      "  {'customer_id': 4, 'name': 'Dana', 'email': 'dana@example.com', 'balance': 'n/a', 'is_active': True} \n",
+      "    → 'n/a' has type str, but expected one of: int, float\n",
+      "\n",
+      "📘 Valid Records DataFrame:\n",
+      "   customer_id   name              email  balance  is_active\n",
+      "0            1  Alice  alice@example.com    120.0       True\n",
+      "1            2    Bob    bob@example.com     75.5      False\n",
+      "2            3                  charlie@    -10.0       True\n"
+     ]
+    }
+   ],
    "source": [
-    "from google.protobuf import descriptor_pool, message_factory\n",
-    "from google.protobuf import descriptor_pb2\n",
+    "# Ques_5.ipynb – Pure‐Python Protobuf Validation (no grpc_tools needed)\n",
+    "\n",
+    "from google.protobuf import descriptor_pb2, descriptor_pool, message_factory\n",
     "import pandas as pd\n",
     "\n",
-    "# Step 1: Dynamically define Protobuf schema\n",
-    "file_desc_proto = descriptor_pb2.FileDescriptorProto()\n",
-    "file_desc_proto.name = 'customer.proto'\n",
-    "file_desc_proto.package = 'customer'\n",
+    "# --- 1. Dynamically Define a Protobuf Schema via DescriptorProto ---\n",
     "\n",
-    "msg = file_desc_proto.message_type.add()\n",
-    "msg.name = 'Customer'\n",
+    "file_desc = descriptor_pb2.FileDescriptorProto()\n",
+    "file_desc.name = 'customer.proto'\n",
+    "file_desc.package = 'customer_package'\n",
+    "msg_type = file_desc.message_type.add()\n",
+    "msg_type.name = 'Customer'\n",
     "\n",
+    "# Define fields: (name, number, type)\n",
     "fields = [\n",
     "    ('customer_id', 1, descriptor_pb2.FieldDescriptorProto.TYPE_INT32),\n",
-    "    ('name', 2, descriptor_pb2.FieldDescriptorProto.TYPE_STRING),\n",
-    "    ('email', 3, descriptor_pb2.FieldDescriptorProto.TYPE_STRING),\n",
-    "    ('balance', 4, descriptor_pb2.FieldDescriptorProto.TYPE_FLOAT),\n",
-    "    ('is_active', 5, descriptor_pb2.FieldDescriptorProto.TYPE_BOOL),\n",
+    "    ('name',        2, descriptor_pb2.FieldDescriptorProto.TYPE_STRING),\n",
+    "    ('email',       3, descriptor_pb2.FieldDescriptorProto.TYPE_STRING),\n",
+    "    ('balance',     4, descriptor_pb2.FieldDescriptorProto.TYPE_FLOAT),\n",
+    "    ('is_active',   5, descriptor_pb2.FieldDescriptorProto.TYPE_BOOL),\n",
     "]\n",
     "\n",
     "for name, num, ftype in fields:\n",
-    "    field = msg.field.add()\n",
-    "    field.name\n"
+    "    fld = msg_type.field.add()\n",
+    "    fld.name   = name\n",
+    "    fld.number = num\n",
+    "    fld.label  = descriptor_pb2.FieldDescriptorProto.LABEL_OPTIONAL\n",
+    "    fld.type   = ftype\n",
+    "\n",
+    "# Register in a Pool and get a Python class\n",
+    "pool = descriptor_pool.DescriptorPool()\n",
+    "file_md = pool.Add(file_desc)\n",
+    "cust_desc = pool.FindMessageTypeByName('customer_package.Customer')\n",
+    "\n",
+    "# Correctly create the prototype (message class)\n",
+    "CustomerMessage = message_factory.MessageFactory(pool).CreatePrototype(cust_desc)\n",
+    "\n",
+    "# --- 2. Sample Records to Validate ---\n",
+    "\n",
+    "records = [\n",
+    "    {\"customer_id\": 1, \"name\": \"Alice\",   \"email\": \"alice@example.com\", \"balance\": 120.0, \"is_active\": True},\n",
+    "    {\"customer_id\": 2, \"name\": \"Bob\",     \"email\": \"bob@example.com\",   \"balance\":  75.5, \"is_active\": False},\n",
+    "    {\"customer_id\": 3, \"name\": \"\",        \"email\": \"charlie@\",         \"balance\": -10.0, \"is_active\": True},  # invalid\n",
+    "    {\"customer_id\": 4, \"name\": \"Dana\",    \"email\": \"dana@example.com\",  \"balance\": \"n/a\", \"is_active\": True},  # invalid\n",
+    "]\n",
+    "\n",
+    "# --- 3. Validation & Encoding Loop ---\n",
+    "\n",
+    "valid = []\n",
+    "invalid = []\n",
+    "\n",
+    "for rec in records:\n",
+    "    try:\n",
+    "        # Attempt to construct + serialize the message\n",
+    "        msg = CustomerMessage(**rec)\n",
+    "        # double‐check types by serializing to bytes\n",
+    "        _ = msg.SerializeToString()\n",
+    "        valid.append(rec)\n",
+    "    except Exception as e:\n",
+    "        invalid.append((rec, str(e)))\n",
+    "\n",
+    "# --- 4. Display Results ---\n",
+    "\n",
+    "print(\"✅ Valid Records:\")\n",
+    "for v in valid:\n",
+    "    print(\" \", v)\n",
+    "\n",
+    "print(\"\\n❌ Invalid Records:\")\n",
+    "for v, err in invalid:\n",
+    "    print(\" \", v, \"\\n    →\", err)\n",
+    "\n",
+    "# --- 5. Build a DataFrame of Only the Valid Records ---\n",
+    "\n",
+    "df_valid = pd.DataFrame(valid)\n",
+    "print(\"\\n📘 Valid Records DataFrame:\")\n",
+    "print(df_valid)\n"
    ]
   }
  ],
