--- a/src/Module 9/Introduction to Data Quality in Data Engineering & ML/Ques_1.ipynb
+++ b/src/Module 9/Introduction to Data Quality in Data Engineering & ML/Ques_1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstats\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ks_2samp\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mevidently\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mreport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Report\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mevidently\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetric_preset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DataDriftPreset\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Step 1: Load Datasets\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Replace these with your actual file paths or data sources\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[8], line 8\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstats\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ks_2samp\n\u001b[0;32m----> 8\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mevidently\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mreport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Report\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mevidently\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetric_preset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DataDriftPreset\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m# Step 1: Load Datasets\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Replace these with your actual file paths or data sources\u001b[39;00m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'evidently.report'"
      ]
     }
@@ -85,28 +85,121 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'evidently.report'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mplt\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mscipy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mstats\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m ks_2samp\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mevidently\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mreport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Report\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mevidently\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetric_preset\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m DataDriftPreset\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'evidently.report'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import ks_2samp\n",
+    "from evidently.report import Report\n",
+    "from evidently.metric_preset import DataDriftPreset\n",
+    "import os\n",
+    "import sys\n",
     "\n",
-    "# Set seed for reproducibility\n",
-    "np.random.seed(42)\n",
+    "# ----------------------------- Configuration ----------------------------- #\n",
+    "reference_file = \"reference_data.csv\"\n",
+    "current_file = \"current_data.csv\"\n",
+    "feature = \"age\"  # Feature to analyze\n",
+    "required_columns = [feature]\n",
+    "# ------------------------------------------------------------------------ #\n",
     "\n",
-    "# Generate reference dataset (e.g., historical or training data)\n",
-    "reference_data = pd.DataFrame({\n",
-    "    'age': np.random.normal(loc=30, scale=5, size=1000).astype(int),  # mean=30, std=5\n",
-    "    'gender': np.random.choice(['M', 'F'], size=1000)\n",
-    "})\n",
-    "reference_data.to_csv(\"reference_data.csv\", index=False)\n",
-    "print(\"✅ 'reference_data.csv' created.\")\n",
+    "def load_csv(file_path):\n",
+    "    \"\"\"Load CSV with error handling.\"\"\"\n",
+    "    if not os.path.exists(file_path):\n",
+    "        print(f\"❌ Error: File not found: {file_path}\")\n",
+    "        sys.exit(1)\n",
+    "    try:\n",
+    "        df = pd.read_csv(file_path)\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error reading {file_path}: {e}\")\n",
+    "        sys.exit(1)\n",
     "\n",
-    "# Generate current dataset (e.g., new incoming data with drift)\n",
-    "current_data = pd.DataFrame({\n",
-    "    'age': np.random.normal(loc=40, scale=10, size=1000).astype(int),  # mean shifted to 40, std=10\n",
-    "    'gender': np.random.choice(['M', 'F'], size=1000)\n",
-    "})\n",
-    "current_data.to_csv(\"current_data.csv\", index=False)\n",
-    "print(\"✅ 'current_data.csv' created.\")\n"
+    "def validate_columns(df, file_name):\n",
+    "    \"\"\"Ensure required columns exist.\"\"\"\n",
+    "    for col in required_columns:\n",
+    "        if col not in df.columns:\n",
+    "            print(f\"❌ Error: '{col}' column missing in {file_name}\")\n",
+    "            sys.exit(1)\n",
+    "\n",
+    "def handle_missing_values(df):\n",
+    "    \"\"\"Drop rows with missing values in required columns.\"\"\"\n",
+    "    return df.dropna(subset=required_columns)\n",
+    "\n",
+    "def detect_data_drift(ref_data, current_data, feature):\n",
+    "    \"\"\"Visualize and statistically test for data drift.\"\"\"\n",
+    "    print(f\"\\n📊 Analyzing drift on feature: '{feature}'\")\n",
+    "    \n",
+    "    # Visualization\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    sns.kdeplot(ref_data[feature], label=\"Reference\", shade=True)\n",
+    "    sns.kdeplot(current_data[feature], label=\"Current\", shade=True)\n",
+    "    plt.title(f\"Distribution of '{feature}' - Data Drift Detection\")\n",
+    "    plt.xlabel(feature)\n",
+    "    plt.ylabel(\"Density\")\n",
+    "    plt.legend()\n",
+    "    plt.grid(True)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "    # Statistical test (KS Test)\n",
+    "    stat, p_value = ks_2samp(ref_data[feature], current_data[feature])\n",
+    "    print(f\"🧪 KS Test → Statistic: {stat:.4f}, p-value: {p_value:.4f}\")\n",
+    "    if p_value < 0.05:\n",
+    "        print(\"🔺 Drift Detected: The distributions are significantly different.\")\n",
+    "    else:\n",
+    "        print(\"✅ No significant drift detected.\")\n",
+    "\n",
+    "def generate_evidently_report(ref_data, current_data):\n",
+    "    \"\"\"Generate a detailed HTML drift report.\"\"\"\n",
+    "    print(\"\\n📄 Generating Evidently data drift report...\")\n",
+    "    try:\n",
+    "        report = Report(metrics=[DataDriftPreset()])\n",
+    "        report.run(reference_data=ref_data, current_data=current_data)\n",
+    "        report.save_html(\"data_drift_report.html\")\n",
+    "        print(\"✅ Drift report saved as 'data_drift_report.html'\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"⚠️ Could not generate Evidently report: {e}\")\n",
+    "\n",
+    "def main():\n",
+    "    # Load datasets\n",
+    "    ref_data = load_csv(reference_file)\n",
+    "    current_data = load_csv(current_file)\n",
+    "\n",
+    "    # Validate columns\n",
+    "    validate_columns(ref_data, reference_file)\n",
+    "    validate_columns(current_data, current_file)\n",
+    "\n",
+    "    # Handle missing values\n",
+    "    ref_data = handle_missing_values(ref_data)\n",
+    "    current_data = handle_missing_values(current_data)\n",
+    "\n",
+    "    # Detect data drift\n",
+    "    detect_data_drift(ref_data, current_data, feature)\n",
+    "\n",
+    "    # Generate HTML report (optional)\n",
+    "    generate_evidently_report(ref_data, current_data)\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()\n"
    ]
   }
  ],
