Added Ques_1.ipynb for advanced data quality strategies module

--- a/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_1.ipynb
+++ b/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_1.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -75,51 +75,70 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "# Create sample data with missing values and outliers\n",
-    "data = {\n",
-    "    'transaction_id': range(1, 21),\n",
-    "    'amount': [100, 250, 400, np.nan, 3000, 120, 560, 450, 600, 700,\n",
-    "               9999, 130, 300, np.nan, 140, 100000, 200, 500, 330, 400],\n",
-    "    'customer_age': [25, 40, np.nan, 34, 60, 22, 30, 28, 35, 50,\n",
-    "                     45, np.nan, 38, 33, 30, 100, 29, 41, 32, 34],\n",
-    "    'merchant_rating': [4.5, 4.0, 3.5, 5.0, 1.0, 4.3, np.nan, 4.2, 3.8, 4.6,\n",
-    "                        2.0, 4.7, 4.1, 4.3, 3.9, 1.5, 4.0, 4.5, 3.7, 4.2]\n",
-    "}\n",
-    "df = pd.DataFrame(data)\n",
+    "def load_data():\n",
+    "    try:\n",
+    "        data = {\n",
+    "            'transaction_id': range(1, 21),\n",
+    "            'amount': [100, 250, 400, np.nan, 3000, 120, 560, 450, 600, 700,\n",
+    "                       9999, 130, 300, np.nan, 140, 100000, 200, 500, 330, 400],\n",
+    "            'customer_age': [25, 40, np.nan, 34, 60, 22, 30, 28, 35, 50,\n",
+    "                             45, np.nan, 38, 33, 30, 100, 29, 41, 32, 34],\n",
+    "            'merchant_rating': [4.5, 4.0, 3.5, 5.0, 1.0, 4.3, np.nan, 4.2, 3.8, 4.6,\n",
+    "                                2.0, 4.7, 4.1, 4.3, 3.9, 1.5, 4.0, 4.5, 3.7, 4.2]\n",
+    "        }\n",
+    "        return pd.DataFrame(data)\n",
+    "    except Exception as e:\n",
+    "        print(\"Error loading data:\", e)\n",
+    "        return pd.DataFrame()\n",
     "\n",
-    "# Data profiling\n",
-    "print(\"Missing values:\\n\", df.isnull().sum())\n",
-    "print(\"\\nData summary:\\n\", df.describe())\n",
+    "def clean_data(df):\n",
+    "    try:\n",
+    "        df_clean = df.fillna(df.mean(numeric_only=True)).drop_duplicates()\n",
+    "        return df_clean\n",
+    "    except Exception as e:\n",
+    "        print(\"Error cleaning data:\", e)\n",
+    "        return df\n",
     "\n",
-    "# Data cleaning\n",
-    "df_filled = df.fillna(df.mean(numeric_only=True))\n",
-    "df_filled = df_filled.drop_duplicates()\n",
+    "def normalize_data(df, columns):\n",
+    "    try:\n",
+    "        scaler = MinMaxScaler()\n",
+    "        df_scaled = df.copy()\n",
+    "        df_scaled[columns] = scaler.fit_transform(df[columns])\n",
+    "        return df_scaled\n",
+    "    except Exception as e:\n",
+    "        print(\"Error normalizing data:\", e)\n",
+    "        return df\n",
     "\n",
-    "# Data normalization\n",
+    "def detect_anomalies(df, columns, contamination=0.1):\n",
+    "    try:\n",
+    "        model = IsolationForest(contamination=contamination, random_state=42)\n",
+    "        df['anomaly'] = model.fit_predict(df[columns])\n",
+    "        df['anomaly_label'] = df['anomaly'].map({1: 'Normal', -1: 'Anomaly'})\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(\"Error detecting anomalies:\", e)\n",
+    "        return df\n",
+    "\n",
+    "def visualize_anomalies(df):\n",
+    "    try:\n",
+    "        plt.figure(figsize=(10, 6))\n",
+    "        sns.scatterplot(data=df, x='amount', y='customer_age', hue='anomaly_label', palette='Set1')\n",
+    "        plt.title('Anomaly Detection using Isolation Forest')\n",
+    "        plt.xlabel('Normalized Amount')\n",
+    "        plt.ylabel('Normalized Customer Age')\n",
+    "        plt.show()\n",
+    "    except Exception as e:\n",
+    "        print(\"Error in visualization:\", e)\n",
+    "\n",
+    "# Execution\n",
+    "df_raw = load_data()\n",
+    "df_cleaned = clean_data(df_raw)\n",
     "numeric_cols = ['amount', 'customer_age', 'merchant_rating']\n",
-    "scaler = MinMaxScaler()\n",
-    "df_normalized = df_filled.copy()\n",
-    "df_normalized[numeric_cols] = scaler.fit_transform(df_normalized[numeric_cols])\n",
+    "df_normalized = normalize_data(df_cleaned, numeric_cols)\n",
+    "df_final = detect_anomalies(df_normalized, numeric_cols)\n",
+    "visualize_anomalies(df_final)\n",
     "\n",
-    "# Anomaly detection using Isolation Forest\n",
-    "clf = IsolationForest(contamination=0.1, random_state=42)\n",
-    "df_normalized['anomaly'] = clf.fit_predict(df_normalized[numeric_cols])\n",
-    "df_normalized['anomaly_label'] = df_normalized['anomaly'].map({1: 'Normal', -1: 'Anomaly'})\n",
-    "\n",
-    "# Output results\n",
-    "print(\"\\nAnomalies detected:\")\n",
-    "print(df_normalized[df_normalized['anomaly_label'] == 'Anomaly'][['transaction_id', 'amount', 'customer_age', 'merchant_rating']])\n",
-    "\n",
-    "# Visualization\n",
-    "plt.figure(figsize=(10, 6))\n",
-    "sns.scatterplot(data=df_normalized, x='amount', y='customer_age', hue='anomaly_label', palette='Set1')\n",
-    "plt.title('Anomaly Detection using Isolation Forest')\n",
-    "plt.xlabel('Normalized Amount')\n",
-    "plt.ylabel('Normalized Customer Age')\n",
-    "plt.show()\n",
-    "\n",
-    "# Final count\n",
-    "print(f\"\\nTotal anomalies detected: {(df_normalized['anomaly_label'] == 'Anomaly').sum()}\")\n"
+    "print(f\"Total anomalies detected: {(df_final['anomaly_label'] == 'Anomaly').sum()}\")\n"
    ]
   },
   {
