Implemented extraction of structured data from unstructured text using regex

--- a/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_2.ipynb
+++ b/src/Module 11/Introduction to Advanced Data Quality Strategies/Ques_2.ipynb
@@ -14,55 +14,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     Customer                   Email        Date   Amount\n",
-      "0    John Doe    john.doe@example.com  2024-06-01  1200.50\n",
-      "1  Jane Smith  jane_smith123@mail.com  2024-06-05   980.00\n",
-      "2     Mike R.      mike_r@example.org  2024-06-12  2450.75\n"
+      "Structured Data:\n",
+      "  Order ID       Customer                 Email           Date  \\\n",
+      "0    23984       John Doe  john.doe@example.com  April 4, 2024   \n",
+      "1    23985  Alice Johnson   alice.j@example.com  April 5, 2024   \n",
+      "\n",
+      "                              Product  \\\n",
+      "0       Wireless Mouse - Model WXM123   \n",
+      "1  Mechanical Keyboard - Model KBD456   \n",
+      "\n",
+      "                                            Feedback          Contact  \n",
+      "0  The mouse works great, but sometimes the scrol...  +1-234-567-8900  \n",
+      "1     Keys are very responsive. Love the RGB lights!  +1-678-910-1122  \n"
      ]
     }
    ],
    "source": [
+    "# Ques_2.ipynb - Handling Unstructured Data with Python (No spaCy)\n",
+    "\n",
     "import re\n",
     "import pandas as pd\n",
     "\n",
-    "# Step 1: Sample unstructured text\n",
-    "text = \"\"\"\n",
+    "# --------- Unstructured text block ---------\n",
+    "unstructured_text = \"\"\"\n",
+    "Order ID: 23984\n",
     "Customer: John Doe\n",
     "Email: john.doe@example.com\n",
-    "Date: 2024-06-01\n",
-    "Amount: $1,200.50\n",
+    "Date: April 4, 2024\n",
+    "Product: Wireless Mouse - Model WXM123\n",
+    "Feedback: The mouse works great, but sometimes the scroll wheel gets stuck.\n",
+    "Contact: +1-234-567-8900\n",
     "\n",
-    "Customer: Jane Smith\n",
-    "Email: jane_smith123@mail.com\n",
-    "Date: 2024-06-05\n",
-    "Amount: $980.00\n",
-    "\n",
-    "Customer: Mike R.\n",
-    "Email: mike_r@example.org\n",
-    "Date: 2024-06-12\n",
-    "Amount: $2,450.75\n",
+    "Order ID: 23985\n",
+    "Customer: Alice Johnson\n",
+    "Email: alice.j@example.com\n",
+    "Date: April 5, 2024\n",
+    "Product: Mechanical Keyboard - Model KBD456\n",
+    "Feedback: Keys are very responsive. Love the RGB lights!\n",
+    "Contact: +1-678-910-1122\n",
     "\"\"\"\n",
     "\n",
-    "# Step 2: Extract data using regular expressions\n",
-    "pattern = r\"Customer:\\s*(.*?)\\nEmail:\\s*(.*?)\\nDate:\\s*(.*?)\\nAmount:\\s*\\$([\\d,]+\\.\\d{2})\"\n",
+    "# --------- Function to extract structured data ---------\n",
+    "def extract_structured_data(text_block):\n",
+    "    pattern_dict = {\n",
+    "        \"Order ID\": r\"Order ID:\\s*(\\d+)\",\n",
+    "        \"Customer\": r\"Customer:\\s*(.+)\",\n",
+    "        \"Email\": r\"Email:\\s*(.+)\",\n",
+    "        \"Date\": r\"Date:\\s*(.+)\",\n",
+    "        \"Product\": r\"Product:\\s*(.+)\",\n",
+    "        \"Feedback\": r\"Feedback:\\s*(.+)\",\n",
+    "        \"Contact\": r\"Contact:\\s*(.+)\",\n",
+    "    }\n",
+    "    \n",
+    "    orders = text_block.strip().split(\"\\n\\n\")\n",
+    "    extracted_data = []\n",
     "\n",
-    "matches = re.findall(pattern, text)\n",
+    "    for order in orders:\n",
+    "        order_data = {}\n",
+    "        for key, pattern in pattern_dict.items():\n",
+    "            match = re.search(pattern, order)\n",
+    "            order_data[key] = match.group(1).strip() if match else None\n",
+    "        extracted_data.append(order_data)\n",
     "\n",
-    "# Step 3: Structure it into a DataFrame\n",
-    "df = pd.DataFrame(matches, columns=[\"Customer\", \"Email\", \"Date\", \"Amount\"])\n",
+    "    return pd.DataFrame(extracted_data)\n",
     "\n",
-    "# Step 4: Convert amount to float\n",
-    "df['Amount'] = df['Amount'].str.replace(',', '').astype(float)\n",
-    "\n",
-    "# Step 5: Display structured data\n",
-    "print(df)\n"
+    "# --------- Extract and display structured DataFrame ---------\n",
+    "df_structured = extract_structured_data(unstructured_text)\n",
+    "print(\"Structured Data:\")\n",
+    "print(df_structured)\n"
    ]
   }
  ],
